# bookmark-manager

./: bookmark-searcher.alfredworkflow  bookmark-searcher.sh
bookmark-manager/: Cargo.toml  Rocket.toml
bookmark-manager/index/: bookmarks.db  bookmarks.json
bookmark-manager/src/: main.rs
chrome-extension/: manifest.json  setting.html  setting.js
frontend/: index.html  index.js  style.css
